did hql