@@ -4,56 +4,87 @@ import org.hibernate.Session;
 import org.hibernate.SessionFactory;
 import org.hibernate.Transaction;
 import org.hibernate.cfg.Configuration;
+import org.hibernate.query.Query;
 
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
-//TIP To <b>Run</b> code, press <shortcut actionId="Run"/> or
-// click the <icon src="AllIcons.Actions.Execute"/> icon in the gutter.
 public class Main {
     public static void main(String[] args) {
-        Alien a1 = new Alien();
-        Alien a2 = new Alien();
         Laptop l1 = new Laptop();
         l1.setLid(1);
-        l1.setRam(24);
-        l1.setBrand("HP");
-        l1.setModel("Victus");
+        l1.setBrand("Asus");
+        l1.setModel("Rog");
+        l1.setRam(16);
+
+
         Laptop l2 = new Laptop();
         l2.setLid(2);
-        l2.setRam(64);
         l2.setBrand("Dell");
-        l2.setModel("AlienWare");
+        l2.setModel("XPS");
+        l2.setRam(32);
+
+        Laptop l3 = new Laptop();
+        l3.setLid(3);
+        l3.setBrand("Apple");
+        l3.setModel("Macbook air");
+        l3.setRam(8);
+
+        Alien a1 = new Alien();
         a1.setAid(101);
-        a1.setLaptops(new ArrayList<>());
-        a1.setName("Ayush");
+        a1.setName("Navin");
         a1.setTech("Java");
-        a1.setLaptop(l1);
-        a1.setLaptop(l2);
 
+
+        Alien a2 = new Alien();
         a2.setAid(102);
-        a2.setLaptops(new ArrayList<>());
-        a2.setName("Vijay");
-        a2.setTech("devOps");
-        a2.setLaptop(l1);
+        a2.setName("Harsh");
+        a2.setTech("Python");
 
-        l1.setAliens(List.of(a1, a2));
-        l2.setAliens(List.of(a1));
-        SessionFactory factory = new Configuration()
+
+        a1.setLaptops(Arrays.asList(l1, l2));
+        a2.setLaptops(Arrays.asList(l3));
+
+
+        SessionFactory sf = new Configuration()
+                .configure()
                 .addAnnotatedClass(Alien.class)
                 .addAnnotatedClass(Laptop.class)
-                .configure("hibernate.cfg.xml")
                 .buildSessionFactory();
 
-        Session session = factory.openSession();
+        Session session = sf.openSession();
+
         Transaction transaction = session.beginTransaction();
         session.persist(l1);
         session.persist(l2);
+        session.persist(l3);
+
         session.persist(a1);
         session.persist(a2);
+
         transaction.commit();
-//        Alien a2 = session.find(Alien.class, 101);
-//        System.out.println(a2.getLaptop(1));
+
+
         session.close();
+
+        Session session1 = sf.openSession();
+
+        Alien a5 = session1.find(Alien.class, 101);
+
+        System.out.println(a5);
+
+        String brand = "Asus";
+        int ram = 16;
+        Query query = session1.createQuery("SELECT brand, model FROM Laptop WHERE ram=?1 AND brand=?2");
+        query.setParameter(1, ram);
+        query.setParameter(2, brand);
+
+        List<Object[]> list = query.getResultList();
+        for (Object[] obj : list) {
+            System.out.println(obj[0] + " " + obj[1]);
+        }
+        System.out.println(list);
+        session1.close();
+        sf.close();
     }
 }
